[gd_scene load_steps=22 format=3 uid="uid://x0ebwlv5qjfo"]

[ext_resource type="Texture2D" uid="uid://bhetiiieh1ov2" path="res://Assets/StartMenuArt/AbilityMenuLeft/AbilityMenuLeftSlot1.png" id="1_0ioab"]
[ext_resource type="Script" uid="uid://bgpbjme8dnncm" path="res://Scripts/ability_select_left.gd" id="1_wob25"]
[ext_resource type="Texture2D" uid="uid://dsbck87x8f65j" path="res://Assets/StartMenuArt/AbilityButtonLeft1/HDashLeftDefault.png" id="3_fsldr"]
[ext_resource type="Texture2D" uid="uid://bsdimacljh822" path="res://Assets/StartMenuArt/AbilityButtonLeft1/HDashLeftPress.png" id="4_wuvd8"]
[ext_resource type="Texture2D" uid="uid://b050vetscbbks" path="res://Assets/StartMenuArt/AbilityButtonLeft1/HDashLeftHover.png" id="5_eqh2i"]
[ext_resource type="Texture2D" uid="uid://dix06vl83i3rj" path="res://Assets/StartMenuArt/AbilityButtonLeft2/VDashLeftDefault.png" id="6_1hxgn"]
[ext_resource type="Texture2D" uid="uid://ba1wn65p81hl1" path="res://Assets/StartMenuArt/AbilityButtonLeft2/VDashLeftPress.png" id="7_01ut5"]
[ext_resource type="Texture2D" uid="uid://boqt50ren72cn" path="res://Assets/StartMenuArt/AbilityButtonLeft2/VDashLeftHover.png" id="8_4lx5s"]
[ext_resource type="Texture2D" uid="uid://clf317wbdijxj" path="res://Assets/StartMenuArt/AbilityButtonLeft3/FrictionlessLeftDefault.png" id="9_aads2"]
[ext_resource type="Texture2D" uid="uid://rjjd8e5xjdyx" path="res://Assets/StartMenuArt/AbilityButtonLeft3/FrictionlessLeftPress.png" id="10_4s8oo"]
[ext_resource type="Texture2D" uid="uid://bt0wkx8sldtno" path="res://Assets/StartMenuArt/AbilityButtonLeft3/FrictionlessLeftHover.png" id="11_be6y7"]
[ext_resource type="Texture2D" uid="uid://dncui7mu4djdb" path="res://Assets/StartMenuArt/AbilityButtonLeft4/GrappleLeftDefault.png" id="12_tdke4"]
[ext_resource type="Texture2D" uid="uid://31ojgqh1c0x" path="res://Assets/StartMenuArt/AbilityButtonLeft4/GrappleLeftPress.png" id="13_d03qq"]
[ext_resource type="Texture2D" uid="uid://dlacpdkwy1708" path="res://Assets/StartMenuArt/LockLeft.png" id="14_be6y7"]
[ext_resource type="Texture2D" uid="uid://qrr2yv5gkfcp" path="res://Assets/StartMenuArt/AbilityButtonLeft4/GrappleLeftHover.png" id="14_k8x6j"]
[ext_resource type="Texture2D" uid="uid://c0sc50fd50fu5" path="res://Assets/StartMenuArt/AbilityButtonLeft5/SlingshotLeftDefault.png" id="15_f1588"]
[ext_resource type="Texture2D" uid="uid://rfs7tlfef1tb" path="res://Assets/StartMenuArt/AbilityButtonLeft5/SlingshotLeftPress.png" id="16_lvtrg"]
[ext_resource type="Texture2D" uid="uid://mpsd7goufl8t" path="res://Assets/StartMenuArt/AbilityButtonLeft5/SlingshotLeftHover.png" id="17_s3wtq"]
[ext_resource type="Texture2D" uid="uid://bnjlbmiwg1jpt" path="res://Assets/StartMenuArt/AbilityButtonLeft6/SpikeLeftDefault.png" id="18_fjndg"]
[ext_resource type="Texture2D" uid="uid://cylvnmb4rrkx5" path="res://Assets/StartMenuArt/AbilityButtonLeft6/SpikeLeftPress.png" id="19_jk1vx"]
[ext_resource type="Texture2D" uid="uid://co4k0tpdyvu2p" path="res://Assets/StartMenuArt/AbilityButtonLeft6/SpikeLeftHover.png" id="20_qu4o0"]

[node name="ability_select_left" type="Control"]
layout_mode = 3
anchor_right = 0.371
anchor_bottom = 0.477
offset_right = -0.320068
offset_bottom = -0.400024
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wob25")

[node name="AbilityMenuLeft" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_0ioab")

[node name="VBoxContainer" type="VBoxContainer" parent="AbilityMenuLeft"]
layout_mode = 0
offset_left = 44.0
offset_top = 66.0
offset_right = 660.0
offset_bottom = 537.0

[node name="AbilityRow1" type="HBoxContainer" parent="AbilityMenuLeft/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Ability1" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow1"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("3_fsldr")
texture_pressed = ExtResource("4_wuvd8")
texture_hover = ExtResource("5_eqh2i")

[node name="Ability2" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow1"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("6_1hxgn")
texture_pressed = ExtResource("7_01ut5")
texture_hover = ExtResource("8_4lx5s")

[node name="Ability3" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow1"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("9_aads2")
texture_pressed = ExtResource("10_4s8oo")
texture_hover = ExtResource("11_be6y7")

[node name="Ability4" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow1"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
texture_normal = ExtResource("12_tdke4")
texture_pressed = ExtResource("13_d03qq")
texture_hover = ExtResource("14_k8x6j")
ignore_texture_size = true

[node name="AbilityRow2" type="HBoxContainer" parent="AbilityMenuLeft/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Ability5" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow2"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("15_f1588")
texture_pressed = ExtResource("16_lvtrg")
texture_hover = ExtResource("17_s3wtq")

[node name="Ability6" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow2"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("18_fjndg")
texture_pressed = ExtResource("19_jk1vx")
texture_hover = ExtResource("20_qu4o0")

[node name="Ability7" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow2"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("14_be6y7")

[node name="Ability8" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow2"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
texture_normal = ExtResource("14_be6y7")
ignore_texture_size = true

[node name="AbilityRow3" type="HBoxContainer" parent="AbilityMenuLeft/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="Ability9" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow3"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("14_be6y7")

[node name="Ability10" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow3"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("14_be6y7")

[node name="Ability11" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow3"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("14_be6y7")

[node name="Ability12" type="TextureButton" parent="AbilityMenuLeft/VBoxContainer/AbilityRow3"]
custom_minimum_size = Vector2(142, 0)
layout_mode = 2
texture_normal = ExtResource("14_be6y7")
ignore_texture_size = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="AbilityMenuLeft/VBoxContainer/AbilityRow1/Ability1" to="." method="_on_ability_1_pressed"]
[connection signal="pressed" from="AbilityMenuLeft/VBoxContainer/AbilityRow1/Ability2" to="." method="_on_ability_2_pressed"]
[connection signal="pressed" from="AbilityMenuLeft/VBoxContainer/AbilityRow1/Ability3" to="." method="_on_ability_3_pressed"]
[connection signal="pressed" from="AbilityMenuLeft/VBoxContainer/AbilityRow1/Ability4" to="." method="_on_ability_4_pressed"]
[connection signal="pressed" from="AbilityMenuLeft/VBoxContainer/AbilityRow2/Ability5" to="." method="_on_ability_5_pressed"]
[connection signal="pressed" from="AbilityMenuLeft/VBoxContainer/AbilityRow2/Ability6" to="." method="_on_ability_6_pressed"]
